# decision-support-api

./: README.md
.github/workflows/: ci.yaml
backend/: .black  .dockerignore  .enf.example  .env-prod  .env.example  .env.prod  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  logger.py  main.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2e38b98f6fe3_fix_formfields_relationship.py  723c2e47c880_fk_projectdata_to_formfields.py  86058d29f193_requirements_column.py  b0fddd75df25_.py  b0fddd75df25_init.py
backend/api/: main.py
backend/api/routes/: ranker.py
backend/db/: config.py  engine.py  models.py
backend/db/models/: startup.py
backend/repositories/: data2text.py
backend/schemas/: ranker.py
backend/services/: data2text.py  data_to_texts.py  text_preprocessing.py  text_ranker.py
backend/tests/: conftest.py
backend/tests/api/: test_api.py
backend/tests/repositories/: test_data2text.py
backend/tests/services/: test_data2text.py  test_text_preprocessing.py
