[tool.poetry]
name = "decision support api"
version = "0.1.0"
description = "rest api module of the decision support system for the selection of support measures for startups"
authors = ["Vdmrl <vvluzin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
